@@ -72,7 +72,7 @@ GtkType    gtk_label_get_type      (void);
 GtkWidget *gtk_label_new           (const char       *str);
 void       gtk_label_set_text      (GtkLabel         *label,
 				    const char       *str);
-gchar *    gtk_label_get_text      (GtkLabel         *label);
+/* Temporarily commented out until memory management behavior is figured out *//* gchar *    gtk_label_get_text      (GtkLabel         *label); */
 void       gtk_label_set_justify   (GtkLabel         *label,
 				    GtkJustification  jtype);
 void       gtk_label_set_pattern   (GtkLabel         *label,
